--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -19,7 +19,7 @@
     {% endfor %}
     
     <!-- Adding the Education Section -->
-    {% if page.education %}
+    {% if page.sidebar.education %}
       <h3>Education</h3>
       <ul>
         {% for edu in page.sidebar.education %}
