--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -19,18 +19,20 @@
     {% endfor %}
     
     <!-- Adding the Education Section -->
-    {% if page.education %}
-      <h3>Education</h3>
-      <ul>
-        {% for edu in page.education %}
-          <li>
-            <strong>{{ edu.degree }}</strong><br>
-            {{ edu.school }}<br>
-            <small>{{ edu.date }}</small>
-          </li>
-        {% endfor %}
-      </ul>
-    {% endif %}
+{% if site.sidebar.education %}
+  <div class="sidebar-section">
+    <h3>教育经历</h3>
+    <ul>
+      {% for edu in site.sidebar.education %}
+        <li>
+          <strong>{{ edu.degree }}</strong><br/>
+          {{ edu.school }}<br/>
+          {{ edu.date }}
+        </li>
+      {% endfor %}
+    </ul>
+  </div>
+{% endif %}
 
     {% if page.sidebar.nav %}
       {% include nav_list nav=page.sidebar.nav %}
