--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -19,11 +19,11 @@
     {% endfor %}
     
     <!-- Adding the Education Section -->
-{% if site.sidebar.education %}
+{% if page.education %}
   <div class="sidebar-section">
     <h3>教育经历</h3>
     <ul>
-      {% for edu in site.sidebar.education %}
+      {% for edu in page.education %}
         <li>
           <strong>{{ edu.degree }}</strong><br/>
           {{ edu.school }}<br/>
