--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -20,7 +20,7 @@
     
     <!-- Adding the Education Section -->
 {% if education %}
-  <div class="sidebar-section">
+  <div class="sidebar sticky">
     <h3>教育经历</h3>
     <ul>
       {% for edu in education %}
