--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -19,7 +19,7 @@
     {% endfor %}
     
     <!-- Adding the Education Section -->
-{% if education %}
+{% if page.sidebar %}
   <div class="sidebar sticky">
     <h3>教育经历</h3>
     <ul>
